🔧 chore: Update custom business MCP type in `librechat.yaml` from streamable-http to eventsource
- Changed the type of the custom business MCP to eventsource for improved data handling and real-time updates.
- This modification enhances the configuration by optimizing server interactions, ensuring better performance.

--- a/librechat.yaml
+++ b/librechat.yaml
@@ -160,7 +160,7 @@ mcpServers:
     # You might want to add a timeout
     # timeout: 30000
   my-business-mcp: # Your custom business MCP
-    type: streamable-http
+    type: eventsource
     url: "https://n8n.metamation.net/mcp/12bd30ab-6657-4d89-95f7-5e6c818d81e6/sse"
     # timeout: 30000 # Uncomment and adjust if needed
 
