--- a/librechat.yaml
+++ b/librechat.yaml
@@ -163,6 +163,10 @@ mcpServers:
     type: sse
     url: "https://n8n.metamation.net/mcp/12bd30ab-6657-4d89-95f7-5e6c818d81e6/sse"
     # timeout: 30000 # Uncomment and adjust if needed
+  outlook-mcp: # Outlook MCP
+    type: sse
+    url: "https://n8n.metamation.net/mcp/97a5106e-0b1a-4b61-8818-937f81d6932c/sse"
+    # timeout: 30000 # Uncomment and adjust if needed
 
 # Definition of custom endpoints
 # customEndpoints:
