--- a/librechat.yaml
+++ b/librechat.yaml
@@ -11,6 +11,8 @@ interface:
   bookmarks: true
   multiConvo: true
   agents: true
+  temporaryChat: true    # Enable ephemeral conversations
+  runCode: true          # Enable code execution interface
 
 modelSpecs:
   list:
@@ -117,25 +119,53 @@ actions:
     - "librechat.ai"
     - "google.com"
 
+# Speech Configuration (STT & TTS)
+speech:
+  tts:
+    openai:
+      apiKey: '${OPENAI_API_KEY}' # Uses your existing OpenAI key
+      model: 'tts-1'
+      voices: ['alloy', 'echo', 'fable', 'onyx', 'nova', 'shimmer']
+  stt:
+    openai:
+      apiKey: '${OPENAI_API_KEY}' # Uses your existing OpenAI key  
+      model: 'whisper-1'
+  speechTab:
+    conversationMode: true
+    advancedMode: false
+    speechToText:
+      engineSTT: "external"
+      languageSTT: "English (US)"
+      autoTranscribeAudio: true
+      decibelValue: -45
+      autoSendText: 0
+    textToSpeech:
+      engineTTS: "external"
+      voice: "alloy"
+      languageTTS: "en"
+      automaticPlayback: true
+      playbackRate: 1.0
+      cacheTTS: true
+
 mcpServers:
   smithery-sequential-thinking:
-    type: websocket
-    url: "wss://server.smithery.ai/@smithery-ai/server-sequential-thinking/mcp?profile=delightful-hyena-GSmzOH&api_key=2889e4fc-ae4b-47c1-b2df-cdcfb187485c"
+    type: streamable-http
+    url: "https://server.smithery.ai/@smithery-ai/server-sequential-thinking/mcp?profile=delightful-hyena-GSmzOH&api_key=2889e4fc-ae4b-47c1-b2df-cdcfb187485c"
     timeout: 60000
     initTimeout: 30000
   custom-exa-search:
-    type: websocket
-    url: "wss://server.smithery.ai/exa/mcp?api_key=2889e4fc-ae4b-47c1-b2df-cdcfb187485c"
+    type: streamable-http
+    url: "https://server.smithery.ai/exa/mcp?api_key=2889e4fc-ae4b-47c1-b2df-cdcfb187485c"
     timeout: 60000
     initTimeout: 30000
   smithery-toolbox:
-    type: websocket
-    url: "wss://server.smithery.ai/@smithery/toolbox/mcp?api_key=2889e4fc-ae4b-47c1-b2df-cdcfb187485c&profile=delightful-hyena-GSmzOH"
+    type: streamable-http
+    url: "https://server.smithery.ai/@smithery/toolbox/mcp?api_key=2889e4fc-ae4b-47c1-b2df-cdcfb187485c&profile=delightful-hyena-GSmzOH"
     timeout: 60000
     initTimeout: 30000
   duckduckgo-mcp:
-    type: websocket
-    url: "wss://server.smithery.ai/@nickclyde/duckduckgo-mcp-server/mcp?api_key=2889e4fc-ae4b-47c1-b2df-cdcfb187485c"
+    type: streamable-http
+    url: "https://server.smithery.ai/@nickclyde/duckduckgo-mcp-server/mcp?api_key=2889e4fc-ae4b-47c1-b2df-cdcfb187485c"
     timeout: 60000
     initTimeout: 30000
   my-business-mcp:
