--- a/librechat.yaml
+++ b/librechat.yaml
@@ -24,8 +24,8 @@ endpoints:
         default:
           - 'google/gemini-2.5-pro-preview'
           - 'anthropic/claude-3.7-sonnet:thinking'
-          - 'anthropic/claude-opus-4:thinking'
-          - 'anthropic/claude-sonnet-4:thinking'
+          - 'anthropic/claude-opus-4'
+          - 'anthropic/claude-sonnet-4'
           - 'openai/gpt-4.1'
           - 'openai/o4-mini-high'
           - 'qwen/qwen3-235b-a22b'
