--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "delete-user": "node config/delete-user.js",
     "update-banner": "node config/update-banner.js",
     "delete-banner": "node config/delete-banner.js",
+    "prebackend": "npm run update-mcp",
     "backend": "cross-env NODE_ENV=production node api/server/index.js",
     "backend:dev": "cross-env NODE_ENV=development npx nodemon api/server/index.js",
     "backend:stop": "node config/stop-backend.js",
@@ -70,7 +71,8 @@
     "b:test:api": "cd api && bun run b:test",
     "b:balance": "bun config/add-balance.js",
     "b:list-balances": "bun config/list-balances.js",
-    "reset-terms": "node config/reset-terms.js"
+    "reset-terms": "node config/reset-terms.js",
+    "update-mcp": "node update-mcp-config.js"
   },
   "repository": {
     "type": "git",
@@ -111,7 +113,8 @@
     "prettier": "^3.5.0",
     "prettier-eslint": "^16.3.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "typescript-eslint": "^8.24.0"
+    "typescript-eslint": "^8.24.0",
+    "js-yaml": "^4.1.0"
   },
   "overrides": {
     "axios": "1.8.2",
