--- a/librechat.yaml
+++ b/librechat.yaml
@@ -100,17 +100,33 @@ speech:
       cacheTTS: true
 mcpServers:
   my-openrouter-mcp:
-    type: streamable-http
+    type: sse
+    url: https://mcps.netlify.app/mcp/openrouter
     timeout: 60000
     initTimeout: 30000
+    headers:
+      X-MCP-API-Key: ${MCP_API_KEY}
   my-exa-search:
-    type: streamable-http
+    type: sse
+    url: https://mcps.netlify.app/mcp/exa
     timeout: 60000
     initTimeout: 30000
+    headers:
+      X-MCP-API-Key: ${MCP_API_KEY}
   my-sequential-thinking:
-    type: streamable-http
+    type: sse
+    url: https://mcps.netlify.app/mcp/thinking
     timeout: 60000
     initTimeout: 30000
+    headers:
+      X-MCP-API-Key: ${MCP_API_KEY}
+  my-stripe-mcp:
+    type: sse
+    url: https://mcps.netlify.app/mcp/stripe
+    timeout: 60000
+    initTimeout: 30000
+    headers:
+      X-MCP-API-Key: ${MCP_API_KEY}
   my-business-mcp:
     type: sse
     url: https://n8n.metamation.net/mcp/12bd30ab-6657-4d89-95f7-5e6c818d81e6/sse
