🔧 chore: Add new MCP server configurations in `librechat.yaml`
- Introduced a new streamable-http MCP server for business strategy with API key authentication.
- Renamed existing MCP entries for clarity, changing `my-business-mcp` to `n8n-business-tools-mcp` and `outlook-mcp` to `n8n-outlook-mcp`.
- Ensured consistent timeout settings across all MCP configurations for improved reliability.

--- a/librechat.yaml
+++ b/librechat.yaml
@@ -137,14 +137,22 @@ mcpServers:
     timeout: 30000
     initTimeout: 15000
 
+  business-strategy:
+    type: streamable-http
+    url: https://mcps.netlify.app/.netlify/functions/mcp-business-strategy
+    headers:
+      X-MCP-API-Key: "${MCP_API_KEY}"
+    timeout: 30000
+    initTimeout: 15000
+
   # Working N8N MCPs (keep these as SSE)
-  my-business-mcp:
+  n8n-business-tools-mcp:
     type: sse
     url: https://n8n.metamation.net/mcp/12bd30ab-6657-4d89-95f7-5e6c818d81e6/sse
     timeout: 30000
     initTimeout: 15000
     
-  outlook-mcp:
+  n8n-outlook-mcp:
     type: sse
     url: https://n8n.metamation.net/mcp/97a5106e-0b1a-4b61-8818-937f81d6932c/sse
     timeout: 30000
