--- a/librechat.yaml
+++ b/librechat.yaml
@@ -20,6 +20,7 @@ endpoints:
       models:
         fetch: false
         default:
+          - google/gemini-2.5-flash-preview-05-20:thinking
           - google/gemini-2.5-pro-preview
           - anthropic/claude-3.7-sonnet:thinking
           - anthropic/claude-opus-4
