🔧 chore: Update `librechat.yaml` and `instructions.js` for improved model handling
- Added a new OpenAI image generator model entry in `librechat.yaml` to enhance image generation capabilities.
- Updated existing OpenAI models to include `gpt-4` and `gpt-3.5-turbo` for better performance.
- Refined instructions in `instructions.js` for GPT models to streamline response formats and improve clarity in user interactions.

--- a/librechat.yaml
+++ b/librechat.yaml
@@ -40,11 +40,21 @@ endpoints:
       agents:
         code: true
         tools: true
+    - name: OpenAI_Image_Generator
+      apiKey: ${OPENAI_API_KEY}
+      baseURL: https://api.openai.com/v1
+      models:
+        default:
+          - gpt-image-1
+        fetch: false
+      titleConvo: false
+      modelDisplayLabel: "OpenAI Image"
   openAI:
     apiKey: ${OPENAI_API_KEY}
     models:
       default:
-        - gpt-image-1
+        - gpt-4
+        - gpt-3.5-turbo
       fetch: false
     titleConvo: true
     titleModel: gpt-3.5-turbo
