--- a/librechat.yaml
+++ b/librechat.yaml
@@ -24,7 +24,9 @@ endpoints:
           - google/gemini-2.5-pro-preview
           - anthropic/claude-3.7-sonnet:thinking
           - anthropic/claude-opus-4
+          - anthropic/claude-opus-4:thinking
           - anthropic/claude-sonnet-4
+          - anthropic/claude-sonnet-4:thinking
           - openai/gpt-4.1
           - openai/o4-mini-high
           - qwen/qwen3-235b-a22b
@@ -44,10 +46,14 @@ endpoints:
     apiKey: ${OPENAI_API_KEY}
     models:
       default:
+        - gpt-4o
+        - gpt-4o-mini
+        - gpt-4.1
+        - gpt-4.1-mini
+        - gpt-4.1-nano
         - gpt-image-1
       fetch: false
-    titleConvo: true
-    titleModel: gpt-3.5-turbo
+    titleConvo: false
     agents:
       code: true
       tools: true
