--- a/librechat.yaml
+++ b/librechat.yaml
@@ -20,19 +20,49 @@ endpoints:
       models:
         fetch: true
         default:
+          # Claude models (only Claude 4)
+          - anthropic/claude-opus-4
+          - anthropic/claude-sonnet-4
+          - anthropic/claude-3.7-sonnet
+          - anthropic/claude-3.7-sonnet:thinking
+          # Google models (no free versions)
+          - google/gemini-2.5-flash-preview-05-20
           - google/gemini-2.5-flash-preview-05-20:thinking
           - google/gemini-2.5-pro-preview
-          - anthropic/claude-3.7-sonnet:thinking
-          - anthropic/claude-opus-4
-          - anthropic/claude-opus-4:thinking
-          - anthropic/claude-sonnet-4
-          - anthropic/claude-sonnet-4:thinking
+          - google/gemini-2.5-flash-preview
+          - google/gemini-2.5-flash-preview:thinking
+          - google/gemini-2.0-flash-001
+          - google/gemini-flash-1.5
+          - google/gemini-flash-1.5-8b
+          # Meta Llama models (no free versions)
+          - meta-llama/llama-3.3-70b-instruct
+          - meta-llama/llama-3.2-90b-vision-instruct
+          - meta-llama/llama-3.2-11b-vision-instruct
+          - meta-llama/llama-3.1-405b-instruct
+          - meta-llama/llama-3.1-70b-instruct
+          - meta-llama/llama-3.1-8b-instruct
+          # Mistral models
+          - mistralai/mistral-large-2411
+          - mistralai/mistral-large-2407
+          - mistralai/mistral-medium-3
+          - mistralai/mistral-small-3.1-24b-instruct
+          - mistralai/mistral-small-24b-instruct-2501
+          - mistralai/mistral-nemo
+          - mistralai/mistral-7b-instruct
+          # Other popular models
+          - x-ai/grok-beta
+          - qwen/qwen-2.5-72b-instruct
+          # OpenAI advanced models only
           - openai/gpt-4.1
+          - openai/gpt-4.1-mini
+          - openai/gpt-4.1-nano
+          - openai/gpt-4.5-preview
+          - openai/o1-preview
+          - openai/o1-mini
+          - openai/o4-mini
           - openai/o4-mini-high
-          - qwen/qwen3-235b-a22b
-          - x-ai/grok-3-beta
       titleConvo: true
-      titleModel: openai/gpt-4.1-nano
+      titleModel: anthropic/claude-3-haiku
       dropParams:
         - stop
       modelDisplayLabel: OpenRouter
@@ -46,21 +76,10 @@ endpoints:
     apiKey: ${OPENAI_API_KEY}
     models:
       default:
-        - o1
-        - o1-mini
-        - o1-preview
-        - o3
-        - o3-mini
-        - o3-high
-        - o4
-        - o4-mini
-        - o4-mini-high
-        - o4-high
-        - gpt-4.1
-        - gpt-4.1-mini
-        - gpt-4.1-nano
-        - gpt-4.5
-      fetch: true
+        # Only need dall-e for image generation
+        - dall-e-3
+        - dall-e-2
+      fetch: false
     titleConvo: false
     agents:
       code: true
