--- a/librechat.yaml
+++ b/librechat.yaml
@@ -18,7 +18,7 @@ endpoints:
       apiKey: ${OPENROUTER_KEY}
       baseURL: https://openrouter.ai/api/v1
       models:
-        fetch: true
+        fetch: false
         default:
           # Claude models (only Claude 4)
           - anthropic/claude-opus-4
@@ -49,7 +49,7 @@ endpoints:
           # Other popular models
           - x-ai/grok-beta
           - qwen/qwen-2.5-72b-instruct
-          # OpenAI advanced models only
+          # OpenAI models (accessed through OpenRouter)
           - openai/gpt-4.1
           - openai/gpt-4.1-mini
           - openai/gpt-4.1-nano
@@ -59,7 +59,7 @@ endpoints:
           - openai/o4-mini
           - openai/o4-mini-high
       titleConvo: true
-      titleModel: anthropic/claude-3-haiku
+      titleModel: openai/gpt-4.1-nano
       dropParams:
         - stop
       modelDisplayLabel: OpenRouter
@@ -73,7 +73,7 @@ endpoints:
     apiKey: ${OPENAI_API_KEY}
     models:
       default:
-        # Only need dall-e for image generation
+        # Only for image generation
         - dall-e-3
         - dall-e-2
       fetch: false
