--- a/librechat.yaml
+++ b/librechat.yaml
@@ -47,9 +47,6 @@ endpoints:
           - mistralai/mistral-small-24b-instruct-2501
           - mistralai/mistral-nemo
           - mistralai/mistral-7b-instruct
-          # Other popular models
-          - x-ai/grok-beta
-          - qwen/qwen-2.5-72b-instruct
           # OpenAI models (accessed through OpenRouter)
           - openai/gpt-4.1
           - openai/gpt-4.1-mini
@@ -59,6 +56,13 @@ endpoints:
           - openai/o1-mini
           - openai/o4-mini
           - openai/o4-mini-high
+          # Llama Models
+          - nvidia/llama-3.1-nemotron-ultra-253b-v1
+          # Other popular models
+          - x-ai/grok-beta
+          - qwen/qwen-2.5-72b-instruct
+          - qwen/qwen3-235b-a22b
+
       titleConvo: true
       titleModel: openai/gpt-4.1-nano
       dropParams:
@@ -66,7 +70,7 @@ endpoints:
       modelDisplayLabel: OpenRouter
       plugins:
         - id: web
-          max_results: 10
+          max_results: 15
       agents:
         code: true
         tools: true
